changes and fixes: - signup.html is changed. "username" is deleted and the DB and the other  files are changed to match it. - the drop downs work on all pages. - the visuals of "Insert" are fixed. - the "map.php" now shows the route from a chosen branch to the hard-coded customer address. (I will connect it to the DB later) - the CSS of the signup, forgot and signin is also changed a bit. - the "store" DB table now has postalCode and the map works with that. - the "nav" and "nav_admin" are edited and fixed a bit, but the BD maint. still needs for (Sahar's part) - The "aboutUs" and "contactUs" were missing their CSS files so I added those.

--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
 
 <html>
     <body style="background-color: rgb(33, 17, 55);">
-        <div class="container col d-flex justify-content-center" style="position: relative; margin-top: 20vmin">
-            <div class="card bg-light text-dark mainc" style="padding: 5vmin">
+        <div class="container col d-flex justify-content-center mt-5" style="position: relative">
+            <div class="card bg-light text-dark mainc p-5" >
                 
                 <h2>Welcome, please login!</h2>
                 <form action="DB_Operations/login.php" method="post" enctype="multipart/form-data">
