--- a/forgot.html
+++ b/forgot.html
@@ -14,8 +14,8 @@
 </head>
 <html>
     <body style="background-color: rgb(33, 17, 55);">
-        <div class="container col d-flex justify-content-center" style="position: relative; margin-top: 20vmin">
-            <div class="card bg-light text-dark mainc" style="padding: 5vmin">
+        <div class="container col d-flex justify-content-center mt-5" style="position: relative;">
+            <div class="card bg-light text-dark mainc p-5">
                 <h2>Enter email to reset your password</h2>
                 <div>
                     <form action="/action_page.php">
