--- a/signup.html
+++ b/signup.html
@@ -14,17 +14,12 @@
 </head>
 
   <body style="background-color: rgb(33, 17, 55);">
-    <div class="container col d-flex justify-content-center" style="position: relative; margin-top: 20vmin">
+    <div class="container col d-flex justify-content-center mt-5" style="position: relative;">
       
-      <div class="card bg-light text-dark mainc" style="padding: 5vmin">
+      <div class="card bg-light text-dark mainc pl-5 pr-5 pt-3 pb-5 mb-5">
 
-        <h2> Sign-up to use our website! :)</h2>
+        <h2> Sign-up to use our website :)</h2>
         <form class="row g-3" action = "DB_operations/signup.php" method="post">
-
-		  <div class="form-group col-12">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-          </div>
 		  
           <div class="form-group col-12">
             <label for="first_name">First Name:</label>
