change: - the home looks better - drag and drop work but it's buggy and not connected to DB_Operations - the invoice and map work perfectly fine if there is data in tables - the payment forms are added - still need a confirmation page at the end!

--- a/signup.html
+++ b/signup.html
@@ -59,8 +59,8 @@
 			</div>
 			
 			<div class="form-group col-6">
-              <label for="unit_num">Unit Number:</label>
-              <input type="text" class="form-control" id="unit_num" name="unit_num" required>
+              <label for="postalCode">Postal Code:</label>
+              <input type="text" class="form-control" id="postalCode" name="postalCode" required>
             </div>
 			
 			<div class="form-group col-6">
