--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
 			
 			<div class="form-group col-6">
               <label for="postalCode">Postal Code:</label>
-              <input type="text" class="form-control" id="postalCode" name="postalCode" required>
+              <input type="text" class="form-control" placeholder="A1B 2F3" pattern="[A-Za-z]{1}[0-9]{1}[A-Za-z]{1} [0-9]{1}[A-Za-z]{1}[0-9]{1}" id="postalCode" name="postalCode" required>
             </div>
 			
 			<div class="form-group col-6">
